Fix contatti section to fill screen on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body {
-  height: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: 'Playfair Display', serif;
@@ -22,6 +22,13 @@ html, body {
     transparent 1px,
     transparent 10px
   );
+}
+
+
+@media (max-width: 768px) {
+  .container-fluid {
+    height: auto !important;
+  }
 }
 
 * {
